...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteY="239dp" />

    <Button
        android:id="@+id/buttonAddTaskMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/add_task"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/taskListLoginButton"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/buttonAllTasksMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_tasks_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/taskListLogoutButton"
        app:layout_constraintEnd_toEndOf="parent"
...
